--- a/index.htm
+++ b/index.htm
@@ -63,12 +63,13 @@
             <span id="OP">0</span>
         </div>
 
-        <div id="reStart" class="button">Restart Game</div>
+        <div id="reStart" class="button">Restart Game</div> <span class="button"
+            style="margin-left: 10px;">Preference</span>
     </section>
     </div>
 
 
-    <script src="./index.js"></script>
+    <script src=" ./index.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
