--- a/index.htm
+++ b/index.htm
@@ -128,8 +128,8 @@
             <div id="AboutText">
                 <Span style="font-size:15px ;">H</Span>i! I am Tanjimul Islam Sabbir. MY Favourite Colour is Skyblue.
                 Gardening is
-                my hobby. I have a indoor
-                garden. I love nature. In my leisure period, I collect various kinds of Nature Photo. My favourite
+                my hobby. I have an indoor
+                garden. I love nature. In my leisure period, I collect various kinds of Nature Photos. My favourite
                 flower is
                 Water-hyacinths. It is a polyphyletic genus of the aquatic flowering plants.
                 <br>
@@ -137,18 +137,20 @@
                 Philosophy
                 Department.
                 I like Philosophy. Infinity is one of
-                my interested topic. Physics is my Favourite subject. Quantam Mechanics is my interested segment in
+                my interested argument. Physics is my Favourite subject. Quantam Mechanics is my interested subject
+                matter in
                 Physics.
-                Geo-Politics, Plants studies one of my notarable interested subject. I have a vest collection of
+                Geo-Politics, Internation warfare, Plants studies one of my notable subject field. I have a vest
+                collection of
                 plants
                 photo. I
-                have a wish to published a Plant website.
+                have a wish to published a Plants & flowers website.
                 <br>
                 <span style="font-size:15px ;">P</span>rogramming is my Passion. I love it. In my most time pass by
                 Coding. I am
                 a Front-end Web Developer. Python is my Favourite programming language. I want to be a Computer
                 Programmer. I
-                want to participate world programming competition. Programming is Dream. <br>
+                want to participate world programming competition. Programming is my Dream. <br>
                 <span>Happy Gaming</span>
                 </p>
             </div>
